360/src/objects/Tile_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <label>Profiles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Retail Store Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tile__c</fullName>
        <label>Tile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tile Configuration</label>
    <nameField>
        <label>Tile Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiles Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>